Fixed spacing on /platforn head

--- a/src/main/stylesheets/main.css.scss
+++ b/src/main/stylesheets/main.css.scss
@@ -1454,7 +1454,7 @@ form.lpeRegForm .mktInput {
   &:after {
     content: "";
     opacity: 0.1;
-    background: url("../img/platform-bg.png") 100% 0 no-repeat;
+    background: url("../img/platform-bg.png") 100% 50% no-repeat;
     position: absolute;
     top: 0;
     left: 0;
